working on import fiche

--- a/bulkimport/transformation_scripts/import.ipynb
+++ b/bulkimport/transformation_scripts/import.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1590,27 +1590,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<p>Stylo &agrave; bille, bleu Plume, noir Crayon, rouge Machine &agrave; &eacute;crire, rouge Premi&egrave;re lettre en rouge</p>\n"
-     ]
-    },
-    {
-     "ename": "ParseError",
-     "evalue": "undefined entity: line 1, column 9 (<string>)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/home/espadini/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2862\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[1;32m\"<ipython-input-55-bf98e7654f8e>\"\u001b[0m, line \u001b[1;32m181\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    bla = ET.fromstring(hasOtherWritingTool_content)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/home/espadini/anaconda3/lib/python3.6/xml/etree/ElementTree.py\"\u001b[0;36m, line \u001b[0;32m1314\u001b[0;36m, in \u001b[0;35mXML\u001b[0;36m\u001b[0m\n\u001b[0;31m    parser.feed(text)\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<string>\"\u001b[0;36m, line \u001b[0;32munknown\u001b[0m\n\u001b[0;31mParseError\u001b[0m\u001b[0;31m:\u001b[0m undefined entity: line 1, column 9\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<function TextIOWrapper.close>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1654,10 +1645,13 @@
     "###################################\n",
     "NS_ROUD = \"http://api.knora.org/ontology/0112/roud-oeuvres/xml-import/v1#\" \n",
     "NS_KNORAIMPORT = \"http://api.knora.org/ontology/knoraXmlImport/v1#\"\n",
-    "NS_KNORARICHTEXT = \"http://example.com\"\n",
     "ET.register_namespace(\"p0112-roud-oeuvres\", NS_ROUD)\n",
     "ET.register_namespace(\"knoraXmlImport\", NS_KNORAIMPORT)\n",
-    "ET.register_namespace(\"\", NS_KNORATEXT)\n",
+    "## DELETE, better to attach <text> to the xml in the cell, so it has a wrapping element and function 'fromstring' works\n",
+    "## NS_KNORARICHTEXT = \"http://example.com\"    \n",
+    "## ET.register_namespace(\"\", NS_KNORARICHTEXT)    \n",
+    "## richtextNS = ET.QName(NS_KNORARICHTEXT, \"text\")      \n",
+    "\n",
     "\n",
     "\n",
     "###################################\n",
@@ -1669,7 +1663,6 @@
     "hasDocumentTypeNS = ET.QName(NS_ROUD, \"hasDocumentType\")\n",
     "hasGeneticStageNS = ET.QName(NS_ROUD, \"hasGeneticStage\")\n",
     "hasOtherWritingToolNS = ET.QName(NS_ROUD, \"hasOtherWritingTool\")\n",
-    "richtextNS = ET.QName(NS_KNORARICHTEXT, \"text\")\n",
     "hasPublicCommentNS = ET.QName(NS_ROUD, \"hasPublicComment\")\n",
     "hasSupportInfoNS = ET.QName(NS_ROUD, \"hasSupportInfo\")\n",
     "hasSupportTypeNS = ET.QName(NS_ROUD, \"hasSupportType\")\n",
@@ -1697,7 +1690,86 @@
     "###################################\n",
     "## PREPARE CONTENT OF ELEMENTS AND ATTRIBUTES\n",
     "###################################\n",
-    "for row in data[6:7]:\n",
+    "\n",
+    "\n",
+    "## to avoid undefined entities when parsing the XML present is certain cells of the CSV\n",
+    "## \"https://dev.w3.org/html5/html-author/charref\"\n",
+    "entities_declaration = '''  <!DOCTYPE HTML PUBLIC \"-//W3C//ENTITIES //EN//HTML\" \n",
+    "                            \"https://www.w3.org/TR/html4/sgml/entities.html\"\n",
+    "                            [   <!ENTITY agrave 'à'>\n",
+    "                                <!ENTITY egrave 'è'>\n",
+    "                                <!ENTITY igrave 'ì'>\n",
+    "                                <!ENTITY ograve 'ò'>\n",
+    "                                <!ENTITY ugrave 'ù'>\n",
+    "                                <!ENTITY Agrave 'À'>\n",
+    "                                <!ENTITY Egrave 'È'>\n",
+    "                                <!ENTITY Igrave 'Ì'>\n",
+    "                                <!ENTITY Ograve 'Ò'>\n",
+    "                                <!ENTITY Ugrave 'Ù'>\n",
+    "                                <!ENTITY eacute 'é'>\n",
+    "                                <!ENTITY Eacute 'É'>\n",
+    "                                <!ENTITY acirc 'â'>\n",
+    "                                <!ENTITY ecirc 'ê'>\n",
+    "                                <!ENTITY icirc 'î'>\n",
+    "                                <!ENTITY ocirc 'ô'>\n",
+    "                                <!ENTITY ucirc 'û'>\n",
+    "                                <!ENTITY Acirc 'Â'>\n",
+    "                                <!ENTITY Ecirc 'Ê'>\n",
+    "                                <!ENTITY Icirc 'Î'>\n",
+    "                                <!ENTITY Ocirc 'Ô'>\n",
+    "                                <!ENTITY Ucirc 'Û'>\n",
+    "                                <!ENTITY auml 'ä'>\n",
+    "                                <!ENTITY euml 'ë'>\n",
+    "                                <!ENTITY iuml 'ï'>\n",
+    "                                <!ENTITY ouml 'ö'>\n",
+    "                                <!ENTITY uuml 'ü'>\n",
+    "                                <!ENTITY yuml 'ÿ'>\n",
+    "                                <!ENTITY Auml 'Ä'>\n",
+    "                                <!ENTITY Euml 'Ë'>\n",
+    "                                <!ENTITY Iuml 'Ï'>\n",
+    "                                <!ENTITY Ouml 'Ö'>\n",
+    "                                <!ENTITY Uuml 'Ü'>\n",
+    "                                <!ENTITY ccedil 'ç'>\n",
+    "                                <!ENTITY Ccedil 'Ç'>\n",
+    "                                <!ENTITY oelig 'œ'>\n",
+    "                                <!ENTITY OElig 'Œ'>\n",
+    "                                <!ENTITY szlig '&#223;'>\n",
+    "                                \n",
+    "                                <!ENTITY rsquo \"'\">  <!-- as if it was &apos; --> \n",
+    "                                <!ENTITY laquo '«'>\n",
+    "                                <!ENTITY raquo '»'>\n",
+    "                                <!ENTITY hellip '…'>\n",
+    "                                <!ENTITY nbsp ' '>\n",
+    "                                <!ENTITY ndash '&#8211;'>\n",
+    "                                <!ENTITY deg '&#176;'>\n",
+    "                                \n",
+    "                                <!ENTITY Alpha '&#913;'>\n",
+    "                                <!ENTITY Delta '&#916;'>\n",
+    "                                <!ENTITY Tau '&#932;'>\n",
+    "                                <!ENTITY Epsilon '&#917;'>\n",
+    "                                <!ENTITY alpha '&#945;'>\n",
+    "                                <!ENTITY beta '&#946;'>\n",
+    "                                <!ENTITY pi '&#928;'>\n",
+    "                                <!ENTITY omicron '&#959;'>\n",
+    "                                <!ENTITY lambda '&#955;'>\n",
+    "                                <!ENTITY nu '&#957;'>\n",
+    "                                <!ENTITY gamma '&#947;'>\n",
+    "                                <!ENTITY upsilon '&#965;'>\n",
+    "                                <!ENTITY iota '&#953;'>\n",
+    "                                <!ENTITY tau '&#964;'>\n",
+    "                                <!ENTITY omega '&#969;'>\n",
+    "                                <!ENTITY epsilon '&#949;'>\n",
+    "                                <!ENTITY mu '&#956;'>\n",
+    "                                <!ENTITY sigmaf '&#962;'>\n",
+    "                                <!ENTITY eta '&#951;'>\n",
+    "                                <!ENTITY chi '&#967;'>\n",
+    "                                <!ENTITY rho '&#961;'>\n",
+    "                                <!ENTITY kappa '&#954;'>\n",
+    "                                \n",
+    "                            ]>  '''\n",
+    "\n",
+    "\n",
+    "for row in data[30:40]:\n",
     "    \n",
     "    \n",
     "    ## -----------------------> @id + label\n",
@@ -1749,9 +1821,23 @@
     "    ## -----------------------> hasOtherWritingTool\n",
     "    otherWritingTool = row[12]\n",
     "    if (otherWritingTool != ''):\n",
-    "        hasOtherWritingTool_content = otherWritingTool\n",
-    "        print(hasOtherWritingTool_content)\n",
-    "                \n",
+    "        ## attach <text> to the xml in the cell, so it has a wrapping element and the function 'fromstring' works\n",
+    "        hasOtherWritingTool_content = '<text xmlns=\"\">'+otherWritingTool+'</text>'\n",
+    "        \n",
+    "        \n",
+    "    ## -----------------------> hasPublicComment\n",
+    "    publicComment = row[23]\n",
+    "    if (publicComment != ''):\n",
+    "        if (\"[Biblio\" in publicComment):\n",
+    "            refbiblio = re.compile(r'\\[(Biblio (\\d+))\\]')\n",
+    "            publicComment_replaced = re.sub(refbiblio, r'<a class=\"salsah-link\" href=\"'+\"ref:\"+r'\\1\">[\\1]</a>', publicComment)\n",
+    "            publicComment_replaced2 = re.sub('ref:Biblio ','ref:biblio__',publicComment_replaced)\n",
+    "            hasPublicComment_content = '<text xmlns=\"\">'+publicComment_replaced2+'</text>'\n",
+    "        else:\n",
+    "            hasPublicComment_content = '<text xmlns=\"\">'+publicComment+'</text>'\n",
+    "        \n",
+    "        \n",
+    "    \n",
     "    \n",
     "    \n",
     "    \n",
@@ -1793,10 +1879,16 @@
     "    ## -----------------------------> hasOtherWritingTool\n",
     "    if (otherWritingTool != ''):\n",
     "        hasOtherWritingTool = ET.SubElement(Manuscript, hasOtherWritingToolNS, attrib={'knoraType':'richtext_value', 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'})\n",
-    "        richtext = ET.SubElement(hasOtherWritingTool, richtextNS, attrib={'xmlns':''})\n",
-    "        bla = ET.fromstring(hasOtherWritingTool_content)\n",
-    "        print(bla)\n",
-    "        richtext.append(bla)\n",
+    "        ## take the content of hasOtherWritingTool + entities_declaration and transform it into xml, otherwise is string and Knora consider it as string\n",
+    "        entities_and_hasOtherWritingTool = ET.fromstring(entities_declaration + hasOtherWritingTool_content)\n",
+    "        hasOtherWritingTool.append(entities_and_hasOtherWritingTool)\n",
+    "        \n",
+    "    \n",
+    "    ## -----------------------------> hasPublicComment\n",
+    "    if (publicComment != ''):\n",
+    "        hasPublicComment = ET.SubElement(Manuscript, hasPublicCommentNS, attrib={'knoraType':'richtext_value', 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'})\n",
+    "        entities_and_hasPublicComment = ET.fromstring(entities_declaration + hasPublicComment_content)\n",
+    "        hasPublicComment.append(entities_and_hasPublicComment)\n",
     "    \n",
     "   \n",
     "        \n",
