import fiches ok

--- a/bulkimport/transformation_scripts/import.ipynb
+++ b/bulkimport/transformation_scripts/import.ipynb
@@ -209,24 +209,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function TextIOWrapper.close>"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -409,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +400,7 @@
        "<function TextIOWrapper.close>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +449,7 @@
     "    else:\n",
     "        nameid = name\n",
     "    if (row[0] == ''):  ## if author has only surname\n",
-    "        authorid = (surnameid).replace(\"'\", '').replace(\"(\", '').replace(\")\", '') \n",
+    "        authorid = (surnameid).replace(\"'\", '').replace(\"(\", '').replace(\")\", '')\n",
     "    else:\n",
     "        authorid = (surnameid+'_'+nameid).replace(\"'\", '').replace(\"(\", '').replace(\")\", '') \n",
     "   \n",
@@ -2308,14 +2290,14 @@
     "    if (datation == '' and datation_comment == ''):\n",
     "        pass\n",
     "    else:\n",
-    "        manuscriptHasDateEstablishedReadable = ET.SubElement(Manuscript, manuscriptHasDateEstablishedReadableNS, attrib={'knoraType':'richtext_value'}) # , 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'\n",
+    "        manuscriptHasDateEstablishedReadable = ET.SubElement(Manuscript, manuscriptHasDateEstablishedReadableNS, attrib={'knoraType':'richtext_value'}) # NO MAPPING NEEDED\n",
     "        entities_and_manuscriptHasDateEstablishedReadable = ET.fromstring(entities_declaration + manuscriptHasDateEstablishedReadable_content)\n",
     "        manuscriptHasDateEstablishedReadable.append(entities_and_manuscriptHasDateEstablishedReadable)\n",
     " \n",
     "\n",
     "    ## -----------------------------> manuscriptHasDateReadable\n",
     "    if (date != ''):\n",
-    "        manuscriptHasDateReadable = ET.SubElement(Manuscript, manuscriptHasDateReadableNS, attrib={'knoraType':'richtext_value'})  # , 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'\n",
+    "        manuscriptHasDateReadable = ET.SubElement(Manuscript, manuscriptHasDateReadableNS, attrib={'knoraType':'richtext_value'})  # NO MAPPING NEEDED\n",
     "        entities_and_manuscriptHasDateReadable = ET.fromstring(entities_declaration + manuscriptHasDateReadable_content)\n",
     "        manuscriptHasDateReadable.append(entities_and_manuscriptHasDateReadable)\n",
     "    \n",
@@ -2333,7 +2315,7 @@
     "    \n",
     "    ## -----------------------------> manuscriptHasOldShelfmark\n",
     "    if (oldShelfmark != ''):\n",
-    "        manuscriptHasOldShelfmark = ET.SubElement(Manuscript, manuscriptHasOldShelfmarkNS, attrib={'knoraType':'richtext_value'})  # , 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'\n",
+    "        manuscriptHasOldShelfmark = ET.SubElement(Manuscript, manuscriptHasOldShelfmarkNS, attrib={'knoraType':'richtext_value'})  # NO MAPPING NEEDED\n",
     "        entities_and_manuscriptHasOldShelfmark = ET.fromstring(entities_declaration + manuscriptHasOldShelfmark_content)\n",
     "        manuscriptHasOldShelfmark.append(entities_and_manuscriptHasOldShelfmark)\n",
     "     \n",
@@ -2346,14 +2328,14 @@
     "        \n",
     "    ## -----------------------------> manuscriptHasShelfmark\n",
     "    if (shelfmark != ''):\n",
-    "        manuscriptHasShelfmark = ET.SubElement(Manuscript, manuscriptHasShelfmarkNS, attrib={'knoraType':'richtext_value'}) # , 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'\n",
+    "        manuscriptHasShelfmark = ET.SubElement(Manuscript, manuscriptHasShelfmarkNS, attrib={'knoraType':'richtext_value'}) # NO MAPPING NEEDED\n",
     "        entities_and_manuscriptHasShelfmark = ET.fromstring(entities_declaration + manuscriptHasShelfmark_content)\n",
     "        manuscriptHasShelfmark.append(entities_and_manuscriptHasShelfmark)\n",
     "        \n",
     "        \n",
     "    ## -----------------------------> manuscriptHasTitle\n",
     "    if (title != ''):\n",
-    "        manuscriptHasTitle = ET.SubElement(Manuscript, manuscriptHasTitleNS, attrib={'knoraType':'richtext_value'}) # , 'mapping_id':'http://rdfh.ch/standoff/mappings/StandardMapping'\n",
+    "        manuscriptHasTitle = ET.SubElement(Manuscript, manuscriptHasTitleNS, attrib={'knoraType':'richtext_value'}) # NO MAPPING NEEDED\n",
     "        entities_and_manuscriptHasTitle = ET.fromstring(entities_declaration + manuscriptHasTitle_content)\n",
     "        manuscriptHasTitle.append(entities_and_manuscriptHasTitle)\n",
     "        \n",
