--- a/todo.txt
+++ b/todo.txt
@@ -114,6 +114,10 @@ On peut utiliser des espaces dans les labels
 
 Pour insérer du XML, copier-coller dans le champ correspondant, qui dans Salsa est comme l'éditeur HTML mais sera possible view source. 
 
+Tutto quanto lo mette in standoff quindi nel testo trovi solo il testo
+
+URI can be checked in graphdb > explore > visual graph
+
 SI PUÒ ENTRARE NELLA VIRTUAL MACHINE CREATA DA DOCKER (bash come ssh). Per esempio, per cambiare editore HTML ... Poi far partire webserver (bisogna cambiare qualcosa in public/js = https://github.com/dhlab-basel/Knora/blob/develop/salsah1/src/public/js/00_init_javascript.js)
 		docker exec -it salsah bash
 		bash-4.4# pwd
