--- a/todo.txt
+++ b/todo.txt
@@ -7,42 +7,135 @@
 ###################
 
 
-#
-##
-### ONTO / SALSAH
-##
-#
 
-When we'll change the location of the cardinality (v2?), put 'isPreviousManuscript' after 'étape génétique'.
-
-
-
-
-#
-##
-### KNORA
-##
-#
-Sul Github di Knora, open Issue (type: question) sur la modelisation du temps
+============================ with DASCH ===============================
+OPEN ISSUES
+- In Salsah: filters on author of resource?
+- Permissions for colleagues (delete entire resource)
+- if ever I want to update ontology (for example, changing the label or commentary, or adding mapping with other ontologies using subclassof and subpropertyof, or adding real changes not affecting data) ? is it possible?
+- Test XML in Salsah, check if error
+- Add item to list (for example archives or translated author)
 
 
+IMPORT
+	ONTO AND DATA
+		- admin.ttl
+		- permissions.ttl
+		- onto.ttl
+		- data.ttl (last version sent with Switch, important because the URI of the manuscripts will be reused for importing images)
+	IMAGES
+		- access to scanlett
+		- bulk import (multiple xml files)
+			ssh espadini@junipero
+			sudo mount -t cifs -o username=espadini,domain=ad,vers=3.0 //nas.unil.ch/scanlett /mnt/scanlettMounted
 
-#
-##
-### DOC 
-##
-#
-Avant de commencer la saisie manuelle (après l'import), créer protocole avec indications sur comment insérer les données et nommer les labels, dans un document externe (Salsah ne lit pas les commentaire des proprietés, mais oui ceux des classes).
 
-LABEL (tout minuscule, pas d'accent)
-Document d'archive: doc_cote_premiermotdutitre
-Texte (si document): txt_cote_premiermotdutitre
-Texte (si publication): txt_
-Article: pub_titre_revue_annee
-Section d'un livre: pub_titre_livre_annee
-Livre: pub_titre_annee
-Personne: nom_prenom
-Maison d'édition: edi_premiermotdunom
+
+
+=============================== ELENA ==============================
+Once import is finished: 
+- finish documentation
+- fix manual fixes (below)
+- check visual graph (below)
+
+
+
+----------------------> CHECK IF ALREADY CHANGED IN VISUAL GRAPH (changes after test - 20-24 august 2018)
+DONE. aggiungere abstract property al LABEL e non COMMENT delle proprietà astratte
+DONE. aggiungere datecomputable come properietà astratta ???
+DONE. in data-lists: correspondence > correspondance
+DONE. témoin de base pour la page du site
+DONE. texte > page du site
+DONE. ajouter notice à périodique et éditeur
+DONE. specifier pages du fac-similés si le texte ne correspond pas à la totalité du témoin de base (par exemple, section d'un cahier, ou d'une liasse d'un recueil). Better like this, even if it adds another info, because we need to retrieve also the "fiche" for the description of the document; if we link directly to the pages, it would need anyway another step to go back to the document containing those pages. In this way, request can be made to look at the specific pages only if the field for specific pages is not empty.
+DONE. title of publication. richtext, not simple !! Oppure decidere come citare cose in titolo
+DONE. original dans le fonds roud in publications --> 'oui ou non ou indiquer le fonds' to be added to the label. Simpletext, not rich
+DONE. retranscrit (ocr) in publications --> 'fait ou pas fait' to be added to the label. Simpletext, not rich 
+DONE. titre du livre in BookSection
+DONE. properties of EstablishedText
+DONE. delete publicationHasTranslator
+DONE. Cambiato da SimpleText a Richtext per hasSupportInfo)
+DONE. Create new property and distinguish datereadable and datecomputable, the same distinction of dateestablishedreadable and dateestablishedcomputable
+DONE. books add possibility to specify pages
+DONE. bookSectionIsPartOf textValue instead of link
+DONE. property hasPublisher added to BookSection
+DONE. added personInfoHasSource to Person
+
+
+
+
+--------------------> DO MANUALLY AFTER IMPORT <-----------------------
+2400 items imported, 60 da ricontrollare manualmente (2,5%)
+
+- correct biblio_321, biblio_309, biblio_671, biblio_672, biblio_663, biblio_634 ("FAKE" in label), do not delete because there are links. Check also in commentaries
+- check publication with photos, form BiblioDB (there are few, and in the ontology should be a link, but we don't have the photo yet)
+- pubblicato dove ? 631	Photographie	Roud Gustave	[Bûcherons], [paysans à table], [Moisonneur], [Paysage]				93			1967-04-22(23)	p. 27, 30, 31
+- check, se non sono già tra gli articoli inserirli a mano (per vedere meglio guarda backup):
+	- 634	Traduction	Holderlin Friedrich, Brentano Clemens	Le Romantisme allemand			Dirigé par Béguin Albert		Marseille	Les Cahiers du Sud	1949	p. 393-405	Hölderlin: "Souvenir", "Temps de la moisson", "Âges de la vie", "Moitié de la vie", "Diotima de l'au-delà (fragment)", "L'Hivers", "Le Printemps", "Quatrain". Brentano: "Je suis une maison...", "Au coeur d'une douleur profonde...", "Échos d'une musique de Beethoven", "Myrte, bien aimé, murmure...", "Chant du cygne". Les versions des poèmes de Hölderlin diffèrent de celles de 1937.	Fait + photocopié			Non
+	- 663	Traduction	Hölderlin Friedrich, Brentano Clemens	Le Romantisme allemand			Dirigé par Béguin Albert	194, no. spécial	Marseille	Les Cahiers du Sud	1937-05(-06)	p. 361-371	Hölderlin: "Souvenir", "Temps de la moisson", "Âges de la vie", "Moitié de la vie", Diotima de l'au-delà (fragment)", "L'Hiver", "Le Printemps", "Quatrain") Poèmes de Clémens Brentano ("Je sais une maison", Au coeur d'une douleur profonde…", "Echos d'une musique de Beethoven", "Myrte bien-aimé murmure…", "Chant du cygne")	Fait + photocopié			Non
+	- Traduction	Leisinger Hermann	Les peintures étrusques de Tarquinia				10		La Guilde du Livre	1953			Fait		Oui	Non (mais dans boîte La Guilde du Livre)
+	- articolo di traduzione con 10 autori ...
+- libri (books.csv) con più di due autori, add gli autori dal terzo in poi
+- INPUT_data/check.csv
+- sections recueils
+- fiches 224, 247, 252, 253, 260, 262, 263, 264, 308, 318, 388, 679, 1242, 1367, 1368, 1369, 1371, 1423 (in OUTPUT/fiches_problematiques.xml)
+- luoghi
+- persons added after (in yellow) and check if there is any source that was not there before
+- notes allant, check backup (ho erroneamente spostato quello che c'era in datation_comment in datation trasformandolo in data ... da ripristinare, dovrebbero essere pochi casi)
+- 72 ---> 27 septembre (fiches to be corrected)
+- check in backup fiche 103
+- A Propos de Roud: 
+Titre: « Gustave Roud » 
+Auteur: SIMOND Daniel
+Le Radio, Journal de la T.S.F., Lausanne, 16 mars 1934, XIIème année, N°571, pages 396-397. Avec des photographies de Gustave Roud. 
+-  MS 2 B/1a  check commentaire (public) à > a
+- plusieurs reference bibliographiques dans commentaire public et commentaire interne ... à créer à la main, chercher "Biblio" dans commentaire ...
+- vérifier qu'il n'y a rien avec "test" ou "dsa"
+- aggiungere manualmente immagine: page_CRLR GR MS 2 C/14a___f. 1r___1
+------------------------------------->  <--------------------------------
+
+
+
+
+============================= FOR EQUIPE ROUD ==================================
+DONE
+	CAMBIAMENTI FATTI
+	- Le regarde et la voix CRLR GR MS 12/K. "Le document manque". Deleted perché creava problemi. Giusto ... ?  OK
+	- Fiche 103 --- commentaire interne truncated ... sorry ...   OK
+	- in FondsRoud Date peut avoir 0000# quand la date n'est pas computable (manque année)  OK
+	- weekday addded <lundi, >  OK
+	- resp ?   NOT IMPORTED, OK
+RIDIRE QUANDO IMPORT È FINITO
+	- added 'cote manquante' to fiches without cote   OK
+	- fiches 577 : 72 septembre (GIÀ CAMBIATO ??)
+	- À majuscule parfois est A. Comment doit être?
+
+
+
+
+
+============================ OPEN ISSUES IN SALSAH1 =================================================================
+https://github.com/dhlab-basel/Knora/tree/develop/salsah1 (ticket frontend salsah, question)
+- visualize comment on properties (otherwise I put that info in label). Examples: publicationHasInternalComment, supportInfo?
+- sort results in alphabetical order at least
+- results only 500 ... !!!! (publications, archival document)
+- label creati manualmente = cauchemar and error prone (per ognuno si dovrebbe poter definire a partire da quali campi crearlo)
+- Typos/coquille: 
+	- "Réduire les possibiliés de choix par vocabulair" > vocabulaire (dans recherche avancée)
+	- a standoff lien vers
+	- Defaul anglais pour les liste dans demo?
+
+
+
+
+=========================== AFTER ===============================
+
+If needed, later: create link 'sameAs' between Author and Person.
+
+
+
+
+
 
 
 
@@ -77,23 +170,42 @@ There is no abstract property hasDirectSource, perché non si può non specifica
 
 Mentre Salsah 2 è un progetto a parte, Salsah 1 sta in Github dentro Knora (ticket frontend salsah, question)
 
+Gravsearch: Virtual Graph Search in Doc Knora, tipo linguaggio SPARQL per fare richieste complesse invece di chiedere una cosa per volta tramite l'API
 
+Per fare download dati da GraphDB, usare Turtle (anche se dice che perde qualcosa) o Json, entrambi funzionano.
 
-#####################
-##
-## BULK IMPORT
-##
-#####################
+On peut utiliser des espaces dans les labels
 
-Download xsd for bulk import
-http://localhost:3333/v1/resources/xmlimportschemas/http%3A%2F%2Fwww.knora.org%2Fontology%2F0112%2Froud-oeuvres?email=root%40example.com&password=test
+Pour insérer du XML, copier-coller dans le champ correspondant, qui dans Salsa est comme l'éditeur HTML mais sera possible view source. 
 
-Upload xml for bulk import
-curl -X POST -d @testImport.xml http://elena.spadini%40unil.ch:k32V@localhost:3333/v1/resources/xmlimport/http%3A%2F%2Fwww.knora.org%2Fontology%2F0112%2Froud-oeuvres
+Tutto quanto lo mette in standoff quindi nel testo trovi solo il testo
 
+URI can be checked in graphdb > explore > visual graph
+Esempio: http://rdfh.ch/0112/roud-oeuvres/YSmHh1XJTvKfsbkKPhpy_w
 
-Fiche --> Document d'archive (roud-ouvres:Manuscript), datation + datationcomment = hasDateEstablishedReadable
-Create rules for transforming datation into hasDateEstablishedComputable (if avant, create period with starting point at 1918, for example, etc.)
+SI PUÒ ENTRARE NELLA VIRTUAL MACHINE CREATA DA DOCKER (bash come ssh). Per esempio, per cambiare editore HTML ... Poi far partire webserver (bisogna cambiare qualcosa in public/js = https://github.com/dhlab-basel/Knora/blob/develop/salsah1/src/public/js/00_init_javascript.js)
+		docker exec -it salsah bash
+		bash-4.4# pwd
+		/salsah/public
+		bash-4.4# ls
+		app            default.less   index.html     less
+		ckeditor.css   favicon.ico    js             project-icons
+		default.css    icons          lang           vendor
+		bash-4.4# cd vendor/
+		bash-4.4# ll
+		bash: ll: command not found
+		bash-4.4# ls
+		arbor                  ckeditor               ckeditor_4.7.0
+		bootstrap              ckeditor-4.7.2-Editor  jQuery
+Oppure
+	docker exec -it knora bash
+
+Multiple pages of the same resources should be created together in the same xml file, otherwise, it would create multiple times also the targeted resources (of course!)
+
+START KNORA and SALSAH FROM SOURCES
+
+Container Sipi must be created specifying to share the nas in location where it is mounted, vd. installationLocal.txt
+
 
 
 
@@ -118,18 +230,12 @@ Create rules for transforming datation into hasDateEstablishedComputable (if ava
 ######################
 
 
-GRAPHDB
-Changer l'ontologie comporte la destruction des données. On peut faire un backup et les re-uploader, non? Dans quel format télécharger les données dans GraphDB, pour les réutiliser après (json)?
-
-SALSAH - KNORA - ONTOLOGIE
-Espaces dans les labels ?
-Insérer texte xml dans Knora, comme pièce jointe? (easiness of editing)
-Page - Document
-Catena di isPreviousStageOf (item isPreviousStageOf x, x isPreviousStageOf y, y isPreviousStageOf ....)
-Time. Afficher les datations dans une timeline? Datation formalisé (avant 1950?)
 
 
-Feedback per Salsah2
+
+
+-------->>>>>>> Feedback per Salsah2  <<<<<<<----------
+
 Creare i label è noioso e error prone. Crearli automaticamente?
 Commenti delle property vanno usati
 
